# lazyanalyst

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  FIX_TRULY_FINAL_schema.sh  GETTING_STARTED.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  TESTING_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
lazyanalyst/: __init__.py  analyze.py  cleaner.py  dashboard.py  eda.py  features.py  insights.py  loader.py  quality.py  reporter.py  schema.py  stats.py  visualizer.py
lazyanalyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analyze.py  test_loader.py  test_quality.py  test_schema.py
